# spike-x

./: .gitignore  CLAUDE.md  DDS.md  README.md  package-lock.json  package.json
api/: CMakeLists.txt  README.md  models.cpp  models.py  package-lock.json  package.json  server.cpp  server.js
api/certs/: server.crt  server.key
api/protos/: models.proto
api/src/: models.cpp  models.grpc.pb.cc  models.grpc.pb.h  models.pb.cc  models.pb.h
database/minio-data/.minio.sys/: format.json
docs/: DDS.md  SRS.md  UFD.md
frontend/: ISSUES-FIXED.md  README-REFACTORED.md  README.md  REFACTORING-COMPLETE.md  package-lock.json  package.json  postcss.config.cjs  tailwind.config.ts  vite.config.ts.timestamp-1735812520592-98b3105d3c8c4.mjs
frontend/app/: entry.client.tsx  root.tsx  tailwind.css
frontend/app/components/: Canvas3D.tsx  MenuBar.tsx  Navbar.tsx  ThemeProvider.tsx  Visualizer.tsx  visualizer-0.tsx  visualizer0.tsx  visualizer1.tsx  visualizer2D.tsx  visualizer3D.tsx
frontend/app/hooks/: useMarketingTheme.ts  useSidebarNavigation.ts
frontend/app/layouts/: AuthLayout.tsx  ConsoleLayout.tsx  LabLayout.tsx  LandingLayout.tsx
frontend/app/routes/: _index.tsx  about.tsx  architecture.tsx  console._index.tsx  console.dashboard.tsx  console.library.tsx  console.models.tsx  console.settings.tsx  console.tsx  console_.login.tsx  console_.signup.tsx  contact.tsx  features.tsx  home.tsx  lab._index.tsx  lab.architecture.tsx  lab.evaluation.tsx  lab.training.tsx  lab.tsx  lab.visualization.tsx  library.tsx  login.tsx  news.tsx  pricing.tsx  solutions.tsx  training.tsx  visualization.tsx
frontend/app/styles/: globals.css
frontend/app/utils/: constants.ts  helpers.ts
frontend/backup/: auth-test.tsx  signup.tsx
lib/axons/: models.hpp
lib/config/: compatibility.json
lib/core/learning/: models.hpp
lib/core/neurons/: models.hpp
lib/core/synapses/: models.hpp
lib/dendrites/: models.hpp
lib/neurons/: models.hpp
lib/synapses/: models.hpp
lib/validation/: rules.hpp
(+70 files in other folders)
